# rust-cmake-test

./: .gitignore  Cargo.toml  build.rs
mymath/: CMakeLists.txt  mymath.h  test.cc
src/: bindings.rs  main.rs
src/cpp/: CMakeLists.txt  mymath.h  mysqrt.cc  test.cc
